--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.18.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^2.0.19",
     "openai": "^4.72.0",
