--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^2.0.19",
+    "ntp-client": "^0.5.3",
     "openai": "^4.72.0",
     "xss-clean": "^0.1.4"
   }
