--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.19",
     "ntp-client": "^0.5.3",
     "openai": "^4.72.0",
+    "path": "^0.12.7",
     "xss-clean": "^0.1.4"
   }
 }
