--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -25,6 +26,13 @@
     "ntp-client": "^0.5.3",
     "openai": "^4.72.0",
     "path": "^0.12.7",
+    "sinon": "^19.0.2",
+    "supertest": "^7.0.0",
     "xss-clean": "^0.1.4"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.3"
   }
 }
